--- a/public_html/login-signup.html
+++ b/public_html/login-signup.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Top Posts
+            Log in / Sign up
         </title>
         <meta charset="UTF-8">        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,11 +69,11 @@
         <!--End Navbar--> 
         <div class="container-fluid">
             <h2>
-                Top Posts 
+                Log in / Sign up
             </h2>
-            <div ng-controller="topPostsCtrl">
+            <div ng-controller="authCtrl">
                 
-            </div>              
+            </div>
         </div>
     </body>
 </html>
