--- a/public_html/top-posts.html
+++ b/public_html/top-posts.html
@@ -62,6 +62,7 @@
                         <li><a href="top-posts.html">Top Posts</a></li>
                         <li ng-show="authUser"><a href="profile.html">Profile</a></li> 
                         <li ng-show="!authUser"><a href="login-signup.html">Log in / Sign up</a></li> 
+                        <li ng-show="authUser"><a href="#">Log out</a></li> 
                     </ul>
                 </div>
             </div>
