Commit #5: -Pretty much finished up login and signup forms -Just need some validation for those forms

--- a/public_html/following.html
+++ b/public_html/following.html
@@ -83,5 +83,9 @@
                 Please log in or register <a href="login-signup.html">here</a>.
             </div>
         </div>
+        <footer>
+            <br>
+            2017 Chris Gonzalez 
+        </footer>
     </body>
 </html>
