--- a/public_html/top-posts.html
+++ b/public_html/top-posts.html
@@ -76,5 +76,9 @@
                 
             </div>              
         </div>
+        <footer>
+            <br>
+            2017 Chris Gonzalez 
+        </footer>
     </body>
 </html>
