--- a/public_html/login-signup.html
+++ b/public_html/login-signup.html
@@ -74,22 +74,22 @@
             </h2>
             <br>
             <div ng-show="!authCtrl" ng-controller="authCtrl">
-                <div id="login" class="col-sm-6 col-md-6 col-xs-12">
+                <div ng-show="login" id="login" class="jumbotron">
                     <h3>
                         Already have an account? Log in here!
                     </h3>
-                    <form id="login-form">
+                    <form id="login-form" name="loginForm">
                         <div class="form-group col-md-7">                           
                             <label for="login-email" class="h4">
                                 Email
                             </label>
-                            <input type="email" class="form-control" id="login-email" name="login-email" value="" placeholder="email" required="required">
+                            <input type="email" class="form-control" id="login-email" name="loginEmail" value="" placeholder="email" required="required"> 
                         </div>
                         <div class="form-group col-md-7">
                             <label for="login-password" class="h4">
                                 Password
                             </label>
-                            <input type="password" class="form-control" id="login-password" name="login-password" value="" placeholder="password" required="required">
+                            <input type="password" class="form-control" id="login-password" name="loginPassword" value="" placeholder="password" required="required">
                         </div>
                         <div class="col-md-7">
                             <button type="button" class="btn btn-default" id="login-btn">
@@ -97,43 +97,51 @@
                             </button>
                         </div>                        
                     </form>
-                </div>
-                <div id="signup" class="col-sm-6 col-md-6 col-xs-12">
+                    <p class="col-md-12">
+                        <br>
+                        Don't have an account? Sign up <a href="#" id="to-signup" ng-click="toggleLoginSignup()">here</a>
+                    </p>
+                </div>     
+                <div ng-show="signup" id="signup" class="jumbotron" ng-init="signup = false">
                     <h3>
                         Want to be a part of our community? Sign up here!                        
                     </h3>
-                    <form id="signup-form">
+                    <form id="signup-form" name="signupForm">
                         <div class="form-group col-sm-12 col-md-6">
                             <label for="first-name" class="h4">
                                 First Name
                             </label>
-                            <input type="text" class="form-control" id="first-name" name="first-name" value="" placeholder="first name" required="required">
+                            <input type="text" class="form-control" id="first-name" name="firstName" value="" placeholder="first name" required="required">
                         </div>
                         <div class="form-group col-sm-12 col-md-6">
                             <label for="last-name" class="h4">
                                 Last Name
                             </label>
-                            <input type="text" class="form-control" id="last-name" name="last-name" value="" placeholder="last name" required="required">
+                            <input type="text" class="form-control" id="last-name" name="lastName" value="" placeholder="last name" required="required">
                         </div>
                         <div class="form-group col-md-7"> 
                             <label for="signup-email" class="h4">
                                 Email
                             </label>
-                            <input type="text" class="form-control" id="signup-email" name="signup-email" value="" placeholder="email" required="required">
+                            <input type="text" class="form-control" id="signup-email" name="signupEmail" value="" placeholder="email" required="required">
                         </div>
                         <div class="form-group col-md-7"> 
                             <label for="signup-password" class="h4">
                                 Password
                             </label>
-                            <input type="password" class="form-control" id="signup-password" name="signup-password" value="" placeholder="password" required="required">
+                            <input type="password" class="form-control" id="signup-password" name="signupPassword" value="" placeholder="password" required="required">
                         </div> 
                         <div class="col-md-7">
                             <button type="button" class="btn btn-default" id="signup-btn">
                                 Sign up
                             </button> 
                         </div>    
-
                     </form>
+                    <br>
+                    <p class="col-md-12">
+                        <br>
+                        Already have an account? Log in <a href="#" id="to-login" ng-click="toggleLoginSignup()">here</a>
+                    </p>
                 </div>
             </div>
             <div ng-show="authUser" ng-controller="authCtrl">
@@ -142,5 +150,9 @@
             </div>
         </div>
         <br>
+        <footer>
+            <br>
+            2017 Chris Gonzalez 
+        </footer>
     </body>
 </html>
