--- a/public_html/login-signup.html
+++ b/public_html/login-signup.html
@@ -33,48 +33,49 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!--App JS-->
         <script src="js/app.js" type="text/javascript"></script>
-
     </head>    
     <body class="wrapper" ng-app="cg-unit3-project">
         <!--Start Navbar-->
-        <nav class="navbar navbar-inverse">
-            <div id="header" class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span> 
-                    </button>
-                    &nbsp;
-                    <a href="index.html">
-                        <img src="img/manuscript-icon.png" alt="Poetry Haven" width="50" height="50">
-                    </a>
+        <div ng-controller="authCtrl">
+            <nav class="navbar navbar-inverse">
+                <div id="header" class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span> 
+                        </button>
+                        &nbsp;
+                        <a href="index.html">
+                            <img src="img/manuscript-icon.png" alt="Poetry Haven" width="50" height="50">
+                        </a>
+                    </div>
+                    <div>
+                        <a class="navbar-brand hidden-xs text-right"  href="index.html">
+                            &nbsp; Poetry Haven
+                        </a> 
+                    </div>  
+                    <div class="collapse navbar-collapse text-right" id="myNavbar">
+                        <ul class="nav navbar-nav">
+                            <li><a href="index.html">Home</a></li>
+                            <li ng-show="authUser"><a href="following.html">Following</a></li>
+                            <li><a href="top-posts.html">Top Posts</a></li>
+                            <li ng-show="authUser"><a href="profile.html">Profile</a></li> 
+                            <li ng-show="!authUser"><a href="login-signup.html">Log in / Sign up</a></li> 
+                            <li ng-show="authUser" ng-click="logout()"><a href="#">Log out</a></li> 
+                        </ul>
+                    </div>
                 </div>
-                <div>
-                    <a class="navbar-brand hidden-xs text-right"  href="index.html">
-                        &nbsp; Poetry Haven
-                    </a> 
-                </div>  
-                <div class="collapse navbar-collapse text-right" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li ng-show="authUser"><a href="following.html">Following</a></li>
-                        <li><a href="top-posts.html">Top Posts</a></li>
-                        <li ng-show="authUser"><a href="profile.html">Profile</a></li> 
-                        <li ng-show="!authUser"><a href="login-signup.html">Log in / Sign up</a></li> 
-                        <li ng-show="authUser"><a href="#">Log out</a></li> 
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!--End Navbar--> 
+            </nav>
+        </div>
+        <!--End Navbar-->  
         <div class="container-fluid">
             <h2>
                 Log in / Sign up
             </h2>
             <br>
-            <div ng-show="!authCtrl" ng-controller="authCtrl">
-                <div ng-show="login" id="login" class="jumbotron">
+            <div ng-show="!authUser" ng-controller="authCtrl">
+                <div ng-show="showLogin" id="login" class="jumbotron" ng-init="showLogin = true">
                     <h3>
                         Already have an account? Log in here!
                     </h3>
@@ -83,16 +84,16 @@
                             <label for="login-email" class="h4">
                                 Email
                             </label>
-                            <input type="email" class="form-control" id="login-email" name="loginEmail" value="" placeholder="email" required="required"> 
+                            <input type="email" class="form-control" ng-model="loginEmail" id="login-email" value="" placeholder="email" required="required"> 
                         </div>
                         <div class="form-group col-md-7">
                             <label for="login-password" class="h4">
                                 Password
                             </label>
-                            <input type="password" class="form-control" id="login-password" name="loginPassword" value="" placeholder="password" required="required">
+                            <input type="password" class="form-control" ng-model="loginPassword" id="login-password" value="" placeholder="password" required="required">
                         </div>
                         <div class="col-md-7">
-                            <button type="button" class="btn btn-default" id="login-btn">
+                            <button type="submit" class="btn btn-default" ng-click="login()" id="login-btn">
                                 Log in
                             </button>
                         </div>                        
@@ -102,37 +103,40 @@
                         Don't have an account? Sign up <a href="#" id="to-signup" ng-click="toggleLoginSignup()">here</a>
                     </p>
                 </div>     
-                <div ng-show="signup" id="signup" class="jumbotron" ng-init="signup = false">
+                <div ng-show="showSignup" id="signup" class="jumbotron" ng-init="showSignup = false">
                     <h3>
                         Want to be a part of our community? Sign up here!                        
                     </h3>
                     <form id="signup-form" name="signupForm">
+                        <!--disabled for now.. C.G. 12-17-->
+                        <!-- 
                         <div class="form-group col-sm-12 col-md-6">
                             <label for="first-name" class="h4">
                                 First Name
                             </label>
-                            <input type="text" class="form-control" id="first-name" name="firstName" value="" placeholder="first name" required="required">
+                            <input type="text" class="form-control" ng-model="firstName" id="first-name" value="" placeholder="first name" required="required">
                         </div>
                         <div class="form-group col-sm-12 col-md-6">
                             <label for="last-name" class="h4">
                                 Last Name
                             </label>
-                            <input type="text" class="form-control" id="last-name" name="lastName" value="" placeholder="last name" required="required">
+                            <input type="text" class="form-control" ng-model="lastName" id="last-name" value="" placeholder="last name" required="required">
                         </div>
+                        -->
                         <div class="form-group col-md-7"> 
                             <label for="signup-email" class="h4">
-                                Email
+                                New User Email
                             </label>
-                            <input type="text" class="form-control" id="signup-email" name="signupEmail" value="" placeholder="email" required="required">
+                            <input type="text" class="form-control" ng-model="signupEmail" id="signup-email" value="" placeholder="email" required="required">
                         </div>
                         <div class="form-group col-md-7"> 
                             <label for="signup-password" class="h4">
-                                Password
+                                New User Password
                             </label>
-                            <input type="password" class="form-control" id="signup-password" name="signupPassword" value="" placeholder="password" required="required">
+                            <input type="password" class="form-control" ng-model="signupPassword" id="signup-password" value="" placeholder="password" required="required">
                         </div> 
                         <div class="col-md-7">
-                            <button type="button" class="btn btn-default" id="signup-btn">
+                            <button type="submit" ng-click="register()" class="btn btn-default" id="signup-btn">
                                 Sign up
                             </button> 
                         </div>    
@@ -147,7 +151,12 @@
             <div ng-show="authUser" ng-controller="authCtrl">
                 Oops, it looks like you may have landed on this page on 
                 accident. 
-            </div>
+                <br>
+                <br>
+                <button class="btn btn-default" ng-click="logout()">
+                    Log out
+                </button>
+            </div>            
         </div>
         <br>
         <footer>
