--- a/public_html/top-posts.html
+++ b/public_html/top-posts.html
@@ -33,41 +33,42 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!--App JS-->
         <script src="js/app.js" type="text/javascript"></script>
-
     </head>    
     <body class="wrapper" ng-app="cg-unit3-project">
         <!--Start Navbar-->
-        <nav class="navbar navbar-inverse">
-            <div id="header" class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span> 
-                    </button>
-                    &nbsp;
-                    <a href="index.html">
-                        <img src="img/manuscript-icon.png" alt="Poetry Haven" width="50" height="50">
-                    </a>
+        <div ng-controller="authCtrl">
+            <nav class="navbar navbar-inverse">
+                <div id="header" class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span> 
+                        </button>
+                        &nbsp;
+                        <a href="index.html">
+                            <img src="img/manuscript-icon.png" alt="Poetry Haven" width="50" height="50">
+                        </a>
+                    </div>
+                    <div>
+                        <a class="navbar-brand hidden-xs text-right"  href="index.html">
+                            &nbsp; Poetry Haven
+                        </a> 
+                    </div>  
+                    <div class="collapse navbar-collapse text-right" id="myNavbar">
+                        <ul class="nav navbar-nav">
+                            <li><a href="index.html">Home</a></li>
+                            <li ng-show="authUser"><a href="following.html">Following</a></li>
+                            <li><a href="top-posts.html">Top Posts</a></li>
+                            <li ng-show="authUser"><a href="profile.html">Profile</a></li> 
+                            <li ng-show="!authUser"><a href="login-signup.html">Log in / Sign up</a></li> 
+                            <li ng-show="authUser" ng-click="logout()"><a href="#">Log out</a></li> 
+                        </ul>
+                    </div>
                 </div>
-                <div>
-                    <a class="navbar-brand hidden-xs text-right"  href="index.html">
-                        &nbsp; Poetry Haven
-                    </a> 
-                </div>  
-                <div class="collapse navbar-collapse text-right" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li><a href="index.html">Home</a></li>
-                        <li ng-show="authUser"><a href="following.html">Following</a></li>
-                        <li><a href="top-posts.html">Top Posts</a></li>
-                        <li ng-show="authUser"><a href="profile.html">Profile</a></li> 
-                        <li ng-show="!authUser"><a href="login-signup.html">Log in / Sign up</a></li> 
-                        <li ng-show="authUser"><a href="#">Log out</a></li> 
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!--End Navbar--> 
+            </nav>
+        </div>
+        <!--End Navbar-->  
         <div class="container-fluid">
             <h2>
                 Top Posts 
