--- a/public_html/following.html
+++ b/public_html/following.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Following
+            Home - Short Story Haven
         </title>
         <meta charset="UTF-8">        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +14,11 @@
 
         <!--Boostrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <!--Font Awesome v 4.7-->
+        <script src="https://use.fontawesome.com/f39747e93f.js"></script>
         <!--App CSS-->
         <link href="css/css.css" rel="stylesheet" type="text/css"/>
-        
+
         <!--Angular-->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>   
         <!--Angular Animate-->
@@ -34,7 +36,7 @@
         <!--App JS-->
         <script src="js/app.js" type="text/javascript"></script>
 
-    </head>    
+    </head>       
     <body class="wrapper" ng-app="cg-unit3-project">
         <!--Start Navbar-->
         <div ng-controller="authCtrl">
@@ -53,7 +55,7 @@
                     </div>
                     <div>
                         <a class="navbar-brand hidden-xs text-right"  href="index.html">
-                            &nbsp; Poetry Haven
+                            &nbsp; Short Story Haven 
                         </a> 
                     </div>  
                     <div class="collapse navbar-collapse text-right" id="myNavbar">
@@ -75,7 +77,7 @@
                 Following
             </h2>
             <div ng-controller="authCtrl" ng-show="authUser">
-                authorized
+                Coming soon!
             </div>
             <div ng-controller="authCtrl" ng-show="!authUser">
                 It looks like you landed on this page on accident or you have
