--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Home
+            Home - Short Story Haven
         </title>
         <meta charset="UTF-8">        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!--Font Awesome v 4.7-->
         <script src="https://use.fontawesome.com/f39747e93f.js"></script>
+        <!-- Angular Material v 1.1.0 style sheet -->
+        <!---<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">-->
         <!--App CSS-->
         <link href="css/css.css" rel="stylesheet" type="text/css"/>
 
@@ -33,6 +35,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <!--Bootstrap 3.3.7 JS-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!-- Angular Material Library v 1.1.0  -->
+        <!--<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>-->
         <!--App JS-->
         <script src="js/app.js" type="text/javascript"></script>
 
@@ -55,7 +59,7 @@
                     </div>
                     <div>
                         <a class="navbar-brand hidden-xs text-right"  href="index.html">
-                            &nbsp; Poetry Haven
+                            &nbsp; Short Story Haven
                         </a> 
                     </div>  
                     <div class="collapse navbar-collapse text-right" id="myNavbar">
@@ -121,16 +125,19 @@
                                 {{post.title}}                                                           
                             </h3>
                             <h5>
-                                By: {{post.author}}, &nbsp;&nbsp;&nbsp; {{post.date}}
+                                By: {{post.author}} &nbsp;&nbsp;&nbsp; {{post.date}}
                             </h5>
                             <p>
-                                {{post.content}}
+                                {{post.content}}                                   
                             </p>
-                            <div class="like" ng-show="authUser" style="padding-left: 8px;">
-                                <a href="#" ng-click="like()">
+                            <div class="like" style="padding-left: 8px;">
+                                <a href="#" ng-show="authUser && !alreadyLiked" ng-click="like(post.$id)">
                                     <i class="fa fa-thumbs-up fa-2x" aria-hidden="true"></i>
-                                </a>   
-                            </div>
+                                </a>
+                                <span>
+                                &nbsp;&nbsp;&nbsp; {{post.numberLikes}} Likes 
+                                </span>   
+                            </div>                                                                                 
                         </div>
                         <br>
                     </li>
